--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,23 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/g_dorm.webp
+    - assets/s_dorm.webp
+    - assets/h_dorm.webp
+    - assets/r_dorm.webp
+    - assets/g_flag.webp
+    - assets/s_flag.webp
+    - assets/h_flag.webp
+    - assets/r_flag.webp
+    - assets/background.webp
+    - assets/sorting_hat.webp
+
+  fonts:
+    - family: CustomFont
+      fonts:
+        - asset: assets/fonts/font1.ttf
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
