--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
   http: ^1.2.2
   url_launcher: ^6.0.20
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
