--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   kakao_flutter_sdk: ^1.9.6
   http: ^1.2.2
   url_launcher: ^6.0.20
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -75,6 +77,11 @@ flutter:
     - family: CustomFont
       fonts:
         - asset: assets/fonts/font1.ttf
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/moribpotter_icon.png"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
